# ecogen-plan

./: .gitignore  .instructions.md  AGENTS.md  CLAUDE.md  DEER_FLOW_QUICK_START.md  EXECUTIVE_SUMMARY_REALISTIC.md  LEED_v5_Combined_Analysis.json  LEED_v5_Realistic_Implementation_Guide.md  LEED_v5_Technical_Specification.docx  MASTER_PLAN.md  api_catalog.json  calculation_analysis_summary.txt  calculation_complexity_analysis.json  data_flow_architecture.md  generate_all_assets.py  integration_feasibility_analysis.json  integration_feasibility_summary.md  leed_v5_credits_analysis.json  skills-lock.json
.claude/: settings.local.json
LEED v5 Credit Automation V1/leed-platform-v2/: .env.example  docker-compose.yml  pyproject.toml
LEED v5 Credit Automation V1/leed-platform-v2/agents/: provider.py  skill_adapter.py
LEED v5 Credit Automation V1/leed-platform-v2/agents/providers/: openai_agents.py
LEED v5 Credit Automation V1/leed-platform-v2/backend/: app.py
LEED v5 Credit Automation V1/leed-platform-v2/backend/db/: schema.sql  session.py
LEED v5 Credit Automation V1/leed-platform-v2/backend/middleware/: audit.py
LEED v5 Credit Automation V1/leed-platform-v2/backend/routers/: credits.py  dashboard.py  projects.py  reviews.py  skills.py
LEED v5 Credit Automation V1/leed-platform-v2/infra/: Dockerfile.backend  Dockerfile.restate
LEED v5 Credit Automation V1/leed-platform-v2/restate_services/: app.py  credit_workflow.py  external_data_service.py  project_object.py
LEED v5 Credit Automation V1/leed-platform-v2/shared/: config.py
docs/: 00_platform_brief.md  (+15 more)
(+470 files in other folders)
